@@ -495,7 +495,8 @@ public class StaticUtils
      * configuration directory is being determined, an empty string will
      * be returned, resulting in the current working directory being used.
      *
-     * Windows:  <Documents and Settings>\<User name>\Application Data\OmegaT
+     * Windows XP :  <Documents and Settings>\<User name>\Application Data\OmegaT
+     * Windows Vista : User\<User name>\AppData\Roaming
      * Linux:    <User Home>/.omegat
      * Solaris/SunOS:  <User Home>/.omegat
      * FreeBSD:  <User Home>/.omegat
@@ -554,15 +555,19 @@ public class StaticUtils
         // check for Windows versions
         if (os.startsWith("Windows"))                                           // NOI18N
         {
-            // get the user's application data directory through the environment
-            // variable %APPDATA%, which usually points to the directory
+            // Trying to locate "Application Data" for 2000 and XP
             // C:\Documents and Settings\<User>\Application Data
+            // We do not use %APPDATA%
             File appDataFile = new File(home, "Application Data");              // NOI18N
-            String appData;
+            String appData = null;
             if (appDataFile.exists())
                 appData = appDataFile.getAbsolutePath();
-            else
-                appData = null;                                                 // NOI18N
+            else // No "Application Data", we're trying Vista
+            {
+                File appDataFileVista = new File(home, "AppData\\Roaming");     // NOI18N
+                if (appDataFileVista.exists())
+                    appData = appDataFileVista.getAbsolutePath();
+            } 
             
             if ((appData != null) && (appData.length() > 0))
             {
@@ -573,8 +578,8 @@ public class StaticUtils
             else
             {
                 // otherwise set the config dir to the user's home directory, usually
-                // C:\Documents and Settings\<User>\
-                m_configDir = home + File.separator;
+                // C:\Documents and Settings\<User>\OmegaT
+                m_configDir = home + WINDOWS_CONFIG_DIR;
             }
         }
         // Check for UNIX varieties
