@@ -3,7 +3,6 @@
 ----------------------------------------------------------------------
 1.8.1 vs. 1.8.0 update 2
 
-
    8 Enhancements
    1 Bugfixe
 ----------------------------------------------------------------------
@@ -31,12 +30,14 @@
   Bug fixes:
   - Extra space in each segment in the German localization
   http://sourceforge.net/support/tracker.php?aid=2169447  
+  - Vista: wrong location of configuration files
+  http://sourceforge.net/support/tracker.php?aid=2200872   
+
 
 ----------------------------------------------------------------------
  OmegaT 1.8.0 update 2 Changes
 ----------------------------------------------------------------------
 1.8.0 update 2 vs. 1.8.0 update 1
-
 
    3 Enhancements
    4 Bugfixes
